--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,10 +1,55 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+	<meta charset="ISO-8859-1">
+	<title>Insert title here</title>
+	
+	<link rel="stylesheet" href="/WebEngineering/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="/WebEngineering/css/bootstrap-theme.min.css" />
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800,600' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="/WebEngineering/css/main.css" />
+
+
 </head>
+
 <body>
-Hello
+
+
+<div class="container-fluid wrapper">
+	<div class="row height100">
+		<div class="col-md-4 height100">
+		<div class="logo"></div>
+		
+		<h3>Lorem ipsum dolor</h3>
+		<p>
+		Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.
+		</p>
+		
+		<h3>Lorem ipsum dolor</h3>
+		<p>Magna aliquyam  est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam .</p>
+		<p>Duis autem  nulla facilisis at vero eros et accumsan et  te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
+		<p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in   nulla facilisi. </p>
+		
+		
+		
+	</div>
+		<div class="col-md-8 height100 welcomeImage">
+		
+		<ul class="menue">
+			<li><a href='#'>Home</a></li>
+			<li><a href='#'>Kontakt</a></li>
+			<li><a href='#'>Impressum</a></li>
+		</ul>
+		
+		</div>
+	
+	</div>
+	
+	
+
+</div>
+
+
 </body>
 </html>
