--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -37,9 +37,9 @@
 		<div class="col-md-8 height100 welcomeImage">
 		
 		<ul class="menue">
-			<li><a href='#'>Home</a></li>
-			<li><a href='#'>Kontakt</a></li>
-			<li><a href='#'>Impressum</a></li>
+			<li><a href='/WebEngineering/index.html'>Home</a></li>
+			<li><a href='/WebEngineering/Vereinsnachrichten.html'>Vereinsnachrichten</a></li>
+			<li><a href='/WebEngineering/Vorstand.html'>Vorstand</a></li>
 		</ul>
 		
 		</div>
