--- a/WebContent/Vorstand.html
+++ b/WebContent/Vorstand.html
@@ -2,101 +2,88 @@
 <html>
 
 <head>
-	<meta charset="ISO-8859-1">
-	<title>Insert title here</title>
-	
-	<link rel="stylesheet" href="/WebEngineering/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="/WebEngineering/css/bootstrap-theme.min.css" />
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800,600' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="/WebEngineering/css/Vorstand.css" />
+<meta charset="ISO-8859-1">
+<title>Insert title here</title>
 
+<link rel="stylesheet" href="/WebEngineering/css/bootstrap.min.css" />
+<link rel="stylesheet" 	href="/WebEngineering/css/bootstrap-theme.min.css" />
+<link 	href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800,600'  rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="/WebEngineering/css/Vorstand.css" />
 
 </head>
 
 <body>
 
+	<div class="container-fluid wrapper">
 
-<div class="container-fluid wrapper">
-	
-	
-	<div class="row">
-		<div class="col-md-1 col-md-offset-1">
-			<div class="logo"></div>
-		</div>
-		
-		<div class="col-md-9">
-			<ul class="menue">
-				<li><a href='/WebEngineering/index.html'>Home</a></li>
-				<li><a href='/WebEngineering/Vereinsnachrichten.html'>Vereinsnachrichten</a></li>
-				<li><a href='/WebEngineering/Vorstand.html'>Vorstand</a></li>
-			</ul>
-		</div>
-		
-	</div>
-	
-	<div class="row">
-		<div class="col-md-12 welcomeImage"></div>
-	</div>
-	
-	<div class="row">
-		<div class="col-md-offset-1 col-md-10">
-		
-		<h1>Unser Vorstand</h1>
-		
-		
-		
-		
-		
 		<div class="row">
-			
-			<div class="col-md-4">
-				<img class="vorstandImage" src=""  />
-		 	</div>
-			
-			<div class="col-md-8">
-				<h3>Steckbreif</h3>
-				
-				<table class="table">
-					<tr>
-						<td>Funktion:</td>
-						<td>Eigentümer</td>
-					</tr>	
-					<tr>
-						<td>Name:</td>
-						<td>Lisa</td>
-					</tr>
-					<tr>
-						<td>Telefon:</td>
-						<td>0800/123456789</td>
-					</tr>
-					<tr>
-						<td>E-Mail:</td>
-						<td>Lisa@gmx.de</td>
-					</tr>
-				</table>
-				<p>
-	 	Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et.
-		</p>
+			<div class="col-md-1 col-md-offset-1">
+				<div class="logo"></div>
 			</div>
-		 </div>
-		
-		
-		 
-		
-		
-		
-		 
-		
-		
-	</div>
-		
-	
-	</div>
-	
-	
 
-</div>
+			<div class="col-md-9">
+				<ul class="menue">
+					<li><a href='/WebEngineering/index.html'>Home</a></li>
+					<li><a href='/WebEngineering/Vereinsnachrichten.html'>Vereinsnachrichten</a></li>
+					<li><a href='/WebEngineering/VereinsnachrichtDetailseite.html'>Vereinsnachrichtendetils</a></li>
+					<li><a href='/WebEngineering/Vorstand.html'>Vorstand</a></li>
+					<li><a href='/WebEngineering/CreateNews.html'>Nachrichten
+							erstellen</a></li>
+				</ul>
+			</div>
 
+		</div>
+
+		<div class="row">
+			<div class="col-md-12 welcomeImage"></div>
+		</div>
+
+		<div class="row">
+			<div class="col-md-offset-1 col-md-10">
+
+				<h1>Unser Vorstand</h1>
+
+				<div class="row">
+
+					<div class="col-md-4">
+						<img class="vorstandImage" src="" />
+					</div>
+
+					<div class="col-md-8">
+						<h3>Steckbreif</h3>
+
+						<table class="table">
+							<tr>
+								<td>Funktion:</td>
+								<td>Eigentümer</td>
+							</tr>
+							<tr>
+								<td>Name:</td>
+								<td>Lisa</td>
+							</tr>
+							<tr>
+								<td>Telefon:</td>
+								<td>0800/123456789</td>
+							</tr>
+							<tr>
+								<td>E-Mail:</td>
+								<td>Lisa@gmx.de</td>
+							</tr>
+						</table>
+						<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+							sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
+							aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
+							duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+							takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum
+							dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+							eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+							sed diam voluptua. At vero eos et.</p>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</div>
 
 </body>
 </html>
