--- a/WebContent/CreateNews.html
+++ b/WebContent/CreateNews.html
@@ -95,7 +95,7 @@
 						<div class="col-md-12">
 							<div class="form-group TextFieldNews">
 								<label>Nachricht:</label>
-								<textarea type="text" name="Name" class="form-control"
+								<textarea name="Name" class="form-control"
 									required="required" placeholder="Nachricht"></textarea>
 							</div>
 						</div>
