--- a/WebContent/DisplayNews.html
+++ b/WebContent/DisplayNews.html
@@ -47,27 +47,28 @@
 				<h1>Nachricht erstellen</h1>
 
 
-				<form class="form-inline" action="DisplayNews.html" method="get">
- 
+				<form class="form-inline" action="" method="post">
+
+
 					<fieldset class="row">
 						<div class="col-md-12">
 
 							<div class="form-group ">
-								<label>vorname:</label> 
-								<input class="form-control" type="text" name="vorname"  placeholder="vorname" />
+								<label>Name:</label> 
+								<input class="form-control" type="text" name="Name"  placeholder="Name" />
 							</div>
 
 
 							<div class="form-group ">
-								<label>name:</label> 
-								<input type="text" class="form-control"  name="name"  placeholder="name" />
+								<label>Vorname:</label> 
+								<input type="text" class="form-control"  name="Vorname"  placeholder="Vorname" />
 							</div>
 
 
 
 							<div class="form-group ">
 								<label>Mail:</label> 
-								<input type="email" name="mail" class="form-control" placeholder="mail" />
+								<input type="email" name="Mail" class="form-control" placeholder="Mail" />
 							</div>
 
 						</div>
@@ -77,12 +78,12 @@
 						<div class="col-md-12">
 							<div class="form-group">
 								<label>Überschrift</label> 
-								<input type="text" name="headline" class="form-control"  placeholder="Überschrift" />
+								<input type="text" name="Überschrift" class="form-control"  placeholder="Überschrift" />
 							</div>
 
 							<div class="form-group ">
 								<label>Datum:</label> 
-								<input type="date" name="datum" class="form-control"  />
+								<input type="date" name="Datum" class="form-control"  />
 							</div>
 
 						</div>
