--- a/WebContent/CreateNews.html
+++ b/WebContent/CreateNews.html
@@ -2,43 +2,17 @@
 <html>
 
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-
-<link rel="stylesheet" href="/WebEngineering/css/bootstrap.min.css" />
-<link rel="stylesheet"
-	href="/WebEngineering/css/bootstrap-theme.min.css" />
-<link
-	href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800,600'
-	rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="/WebEngineering/css/createNews.css" />
-
+ 
+ 	<%@ include file="../Templates/PageHead.jsp" %>
 
 </head>
 
 <body>
 
 	<div class="container-fluid wrapper">
-		<header class="row">
-			<div class="col-md-1 col-md-offset-1">
-				<div class="logo"></div>
-			</div>
-
-			<nav class="col-md-9">
-				<ul class="menue">
-					<li><a href='/WebEngineering/index.html'>Home</a></li>
-					<li><a href='/WebEngineering/Vereinsnachrichten.html'>Vereinsnachrichten</a></li>
-					<li><a href='/WebEngineering/VereinsnachrichtDetailseite.html'>Vereinsnachrichtendetils</a></li>
-					<li><a href='/WebEngineering/Vorstand.html'>Vorstand</a></li>
-					<li><a href='/WebEngineering/Vorstand.html'>Nachrichten  erstellen</a></li>
-				</ul>
-			</nav>
-
-		</header>
-
-		<section class="row">
-			<div class="col-md-12 welcomeImage"></div>
-		</section>
+		 
+		 
+		 	<%@ include file="../Templates/PageHeader.jsp" %>
 
 		<div class="row">
 
