--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -52,12 +52,14 @@
 			<div class="col-md-8 height100 welcomeImage">
 
 				<ul class="menue">
+  	
 					<li><a href='/WebEngineering/index.html'>Home</a></li>
-					<li><a href='/WebEngineering/Vereinsnachrichten.html'>Vereinsnachrichten</a></li>
-					<li><a href='/WebEngineering/VereinsnachrichtDetailseite.html'>Vereinsnachrichtendetils</a></li>
+					<li><a href='/WebEngineering/NewsList.jsp'>Vereinsnachrichten</a></li>
+					<li><a href='/WebEngineering/NewsDetails.jsp'>Vereinsnachrichtendetils</a></li>
 					<li><a href='/WebEngineering/Vorstand.html'>Vorstand</a></li>
-					<li><a href='/WebEngineering/CreateNews.html'>Nachrichten
-							erstellen</a></li>
+					<li><a href='/WebEngineering/CreateNews.jsp'>Nachrichten erstellen</a></li>
+					<li><a href='/WebEngineering/Chat.jsp'>Chat</a></li>
+							
 				</ul>
 
 			</div>
